--- a/src/css/output.css
+++ b/src/css/output.css
@@ -639,6 +639,38 @@ h3{
   color: rgb(50 108 249 / var(--tw-text-opacity));
 }
 
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
+.-bottom-\[124px\]{
+  bottom: -124px;
+}
+
+.-top-2{
+  top: -0.5rem;
+}
+
+.right-0{
+  right: 0px;
+}
+
+.right-\[189px\]{
+  right: 189px;
+}
+
+.-z-10{
+  z-index: -10;
+}
+
+.z-10{
+  z-index: 10;
+}
+
 .-mb-2{
   margin-bottom: -0.5rem;
 }
@@ -655,16 +687,28 @@ h3{
   margin-bottom: 3.5rem;
 }
 
+.mb-20{
+  margin-bottom: 5rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
+}
+
+.mb-7{
+  margin-bottom: 1.75rem;
+}
+
+.mb-8{
+  margin-bottom: 2rem;
 }
 
 .mb-\[136px\]{
   margin-bottom: 136px;
 }
 
-.mb-8{
-  margin-bottom: 2rem;
+.mr-4{
+  margin-right: 1rem;
 }
 
 .block{
@@ -681,6 +725,11 @@ h3{
 
 .grid{
   display: grid;
+}
+
+.size-\[33px\]{
+  width: 33px;
+  height: 33px;
 }
 
 .size-\[37px\]{
@@ -700,8 +749,16 @@ h3{
   height: 1.75rem;
 }
 
+.h-\[276px\]{
+  height: 276px;
+}
+
 .h-\[42px\]{
   height: 42px;
+}
+
+.h-\[591px\]{
+  height: 591px;
 }
 
 .w-313{
@@ -720,16 +777,36 @@ h3{
   width: 1361px;
 }
 
+.w-\[207px\]{
+  width: 207px;
+}
+
+.w-\[309px\]{
+  width: 309px;
+}
+
 .w-\[45px\]{
   width: 45px;
+}
+
+.w-\[820px\]{
+  width: 820px;
 }
 
 .max-w-\[1523px\]{
   max-width: 1523px;
 }
 
+.max-w-\[1596px\]{
+  max-width: 1596px;
+}
+
 .max-w-\[1680px\]{
   max-width: 1680px;
+}
+
+.max-w-\[547px\]{
+  max-width: 547px;
 }
 
 .max-w-\[734px\]{
@@ -773,6 +850,10 @@ h3{
   gap: 0.625rem;
 }
 
+.gap-3{
+  gap: 0.75rem;
+}
+
 .gap-4{
   gap: 1rem;
 }
@@ -801,12 +882,32 @@ h3{
   margin-bottom: calc(0.625rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-xl{
   border-radius: 0.75rem;
 }
 
 .border-none{
   border-style: none;
+}
+
+.bg-\[\#2D2D2D\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 45 45 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#8B8B8B\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 139 139 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r{
@@ -833,9 +934,19 @@ h3{
   padding-right: 1.25rem;
 }
 
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-\[46px\]{
@@ -852,8 +963,8 @@ h3{
   padding-bottom: 6rem;
 }
 
-.pt-14{
-  padding-top: 3.5rem;
+.pt-16{
+  padding-top: 4rem;
 }
 
 .pt-\[101px\]{
@@ -872,6 +983,10 @@ h3{
   font-size: 22px;
 }
 
+.text-\[23px\]{
+  font-size: 23px;
+}
+
 .text-\[25px\]{
   font-size: 25px;
 }
@@ -888,12 +1003,21 @@ h3{
   font-size: 40px;
 }
 
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
 
 .font-extrabold{
   font-weight: 800;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .font-normal{
@@ -912,8 +1036,16 @@ h3{
   line-height: 168px !important;
 }
 
+.leading-\[27px\]{
+  line-height: 27px;
+}
+
 .leading-\[33px\]{
   line-height: 33px;
+}
+
+.leading-\[34px\]{
+  line-height: 34px;
 }
 
 .leading-\[38px\]{
@@ -932,9 +1064,20 @@ h3{
   line-height: 60px;
 }
 
+.text-brand-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(50 108 249 / var(--tw-text-opacity));
+}
+
 .text-brand-gray-600{
   --tw-text-opacity: 1;
   color: rgb(112 112 112 / var(--tw-text-opacity));
+}
+
+.shadow-main{
+  --tw-shadow: 0 30px 50px rgba(0,0,0,0.4);
+  --tw-shadow-colored: 0 30px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .container{
