The last section of step 2

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -655,6 +655,10 @@ h3{
   top: -0.5rem;
 }
 
+.bottom-0{
+  bottom: 0px;
+}
+
 .right-0{
   right: 0px;
 }
@@ -671,8 +675,16 @@ h3{
   z-index: 10;
 }
 
+.z-20{
+  z-index: 20;
+}
+
 .-mb-2{
   margin-bottom: -0.5rem;
+}
+
+.-mb-7{
+  margin-bottom: -1.75rem;
 }
 
 .-mt-2{
@@ -691,8 +703,16 @@ h3{
   margin-bottom: 5rem;
 }
 
+.mb-24{
+  margin-bottom: 6rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 
 .mb-7{
@@ -761,6 +781,10 @@ h3{
   height: 591px;
 }
 
+.h-auto{
+  height: auto;
+}
+
 .w-313{
   width: 313px;
 }
@@ -793,6 +817,14 @@ h3{
   width: 820px;
 }
 
+.w-\[92\.4\%\]{
+  width: 92.4%;
+}
+
+.w-full{
+  width: 100%;
+}
+
 .max-w-\[1523px\]{
   max-width: 1523px;
 }
@@ -805,12 +837,20 @@ h3{
   max-width: 1680px;
 }
 
+.max-w-\[1771px\]{
+  max-width: 1771px;
+}
+
 .max-w-\[547px\]{
   max-width: 547px;
 }
 
 .max-w-\[734px\]{
   max-width: 734px;
+}
+
+.max-w-\[926px\]{
+  max-width: 926px;
 }
 
 .max-w-\[969px\]{
@@ -822,16 +862,16 @@ h3{
   max-width: max-content;
 }
 
-.max-w-\[\]{
-  max-width: ;
-}
-
-.max-w-\[926px\]{
-  max-width: 926px;
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.flex-col{
+  flex-direction: column;
 }
 
 .items-center{
@@ -848,6 +888,10 @@ h3{
 
 .gap-1{
   gap: 0.25rem;
+}
+
+.gap-12{
+  gap: 3rem;
 }
 
 .gap-2{
@@ -908,6 +952,11 @@ h3{
   border-style: none;
 }
 
+.bg-\[\#0D0D0D\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 13 13 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#2D2D2D\]{
   --tw-bg-opacity: 1;
   background-color: rgb(45 45 45 / var(--tw-bg-opacity));
@@ -942,6 +991,11 @@ h3{
   padding-right: 1.25rem;
 }
 
+.px-\[84px\]{
+  padding-left: 84px;
+  padding-right: 84px;
+}
+
 .py-24{
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -955,6 +1009,11 @@ h3{
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .py-\[46px\]{
@@ -971,8 +1030,28 @@ h3{
   padding-bottom: 6rem;
 }
 
+.pb-\[212px\]{
+  padding-bottom: 212px;
+}
+
+.pl-11{
+  padding-left: 2.75rem;
+}
+
+.pl-7{
+  padding-left: 1.75rem;
+}
+
 .pt-16{
   padding-top: 4rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
+}
+
+.pt-8{
+  padding-top: 2rem;
 }
 
 .pt-\[101px\]{
@@ -1011,6 +1090,10 @@ h3{
   font-size: 40px;
 }
 
+.text-\[80px\]{
+  font-size: 80px;
+}
+
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1032,6 +1115,10 @@ h3{
   font-weight: 400;
 }
 
+.font-semibold{
+  font-weight: 600;
+}
+
 .capitalize{
   text-transform: capitalize;
 }
@@ -1042,6 +1129,10 @@ h3{
 
 .\!leading-\[168px\]{
   line-height: 168px !important;
+}
+
+.leading-\[120px\]{
+  line-height: 120px;
 }
 
 .leading-\[27px\]{
@@ -1072,8 +1163,8 @@ h3{
   line-height: 60px;
 }
 
-.leading-\[\]{
-  line-height: ;
+.leading-\[93px\]{
+  line-height: 93px;
 }
 
 .text-brand-blue-500{
@@ -1081,13 +1172,19 @@ h3{
   color: rgb(50 108 249 / var(--tw-text-opacity));
 }
 
+.text-brand-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(145 145 145 / var(--tw-text-opacity));
+}
+
 .text-brand-gray-600{
   --tw-text-opacity: 1;
   color: rgb(112 112 112 / var(--tw-text-opacity));
 }
 
-.text-\[\]{
-  color: ;
+.text-brand-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(15 198 92 / var(--tw-text-opacity));
 }
 
 .shadow-main{
