--- a/src/css/output.css
+++ b/src/css/output.css
@@ -862,6 +862,14 @@ h3{
   max-width: max-content;
 }
 
+.max-w-\[116px\]{
+  max-width: 116px;
+}
+
+.max-w-\[1149px\]{
+  max-width: 1149px;
+}
+
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
