--- a/src/css/output.css
+++ b/src/css/output.css
@@ -731,6 +731,10 @@ h3{
   margin-right: 1rem;
 }
 
+.mr-5{
+  margin-right: 1.25rem;
+}
+
 .block{
   display: block;
 }
@@ -825,6 +829,10 @@ h3{
   width: 100%;
 }
 
+.max-w-\[1149px\]{
+  max-width: 1149px;
+}
+
 .max-w-\[1523px\]{
   max-width: 1523px;
 }
@@ -860,14 +868,6 @@ h3{
 .max-w-max{
   max-width: -moz-max-content;
   max-width: max-content;
-}
-
-.max-w-\[116px\]{
-  max-width: 116px;
-}
-
-.max-w-\[1149px\]{
-  max-width: 1149px;
 }
 
 .grid-cols-2{
@@ -1197,6 +1197,12 @@ h3{
 
 .shadow-main{
   --tw-shadow: 0 30px 50px rgba(0,0,0,0.4);
+  --tw-shadow-colored: 0 30px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-secondary{
+  --tw-shadow: 0 30px 50px rgba(100,100,100,0.50);
   --tw-shadow-colored: 0 30px 50px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
