--- a/src/css/output.css
+++ b/src/css/output.css
@@ -735,6 +735,10 @@ h3{
   margin-right: 1.25rem;
 }
 
+.mb-\[52px\]{
+  margin-bottom: 52px;
+}
+
 .block{
   display: block;
 }
@@ -870,6 +874,14 @@ h3{
   max-width: max-content;
 }
 
+.max-w-\[\]{
+  max-width: ;
+}
+
+.max-w-\[1866px\]{
+  max-width: 1866px;
+}
+
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -973,6 +985,21 @@ h3{
 .bg-\[\#8B8B8B\]{
   --tw-bg-opacity: 1;
   background-color: rgb(139 139 139 / var(--tw-bg-opacity));
+}
+
+.bg-brand-dark-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 14 14 / var(--tw-bg-opacity));
+}
+
+.bg-red-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-brand-gray-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(112 112 112 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r{
@@ -1193,6 +1220,10 @@ h3{
 .text-brand-green-500{
   --tw-text-opacity: 1;
   color: rgb(15 198 92 / var(--tw-text-opacity));
+}
+
+.opacity-45{
+  opacity: 0.45;
 }
 
 .shadow-main{
