--- a/src/css/output.css
+++ b/src/css/output.css
@@ -613,6 +613,13 @@ h3{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   text-transform: capitalize;
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.main-btn:hover{
+  opacity: 0.75;
 }
 
 .secondary-btn{
@@ -628,6 +635,13 @@ h3{
   text-transform: capitalize;
   --tw-text-opacity: 1;
   color: rgb(112 112 112 / var(--tw-text-opacity));
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.secondary-btn:hover{
+  opacity: 0.75;
 }
 
 .step{
@@ -707,6 +721,14 @@ h3{
   margin-bottom: 6rem;
 }
 
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
+.mb-3\.5{
+  margin-bottom: 0.875rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -727,24 +749,16 @@ h3{
   margin-bottom: 136px;
 }
 
+.mb-\[52px\]{
+  margin-bottom: 52px;
+}
+
 .mr-4{
   margin-right: 1rem;
 }
 
 .mr-5{
   margin-right: 1.25rem;
-}
-
-.mb-\[52px\]{
-  margin-bottom: 52px;
-}
-
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-
-.mb-3\.5{
-  margin-bottom: 0.875rem;
 }
 
 .block{
@@ -785,6 +799,10 @@ h3{
   height: 1.75rem;
 }
 
+.h-\[151px\]{
+  height: 151px;
+}
+
 .h-\[276px\]{
   height: 276px;
 }
@@ -793,24 +811,16 @@ h3{
   height: 42px;
 }
 
+.h-\[52px\]{
+  height: 52px;
+}
+
 .h-\[591px\]{
   height: 591px;
 }
 
 .h-auto{
   height: auto;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-\[52px\]{
-  height: 52px;
-}
-
-.h-\[151px\]{
-  height: 151px;
 }
 
 .w-313{
@@ -829,6 +839,10 @@ h3{
   width: 1361px;
 }
 
+.w-\[164px\]{
+  width: 164px;
+}
+
 .w-\[207px\]{
   width: 207px;
 }
@@ -839,6 +853,10 @@ h3{
 
 .w-\[45px\]{
   width: 45px;
+}
+
+.w-\[47px\]{
+  width: 47px;
 }
 
 .w-\[820px\]{
@@ -853,24 +871,12 @@ h3{
   width: 100%;
 }
 
-.w-\[\]{
-  width: ;
-}
-
-.w-\[47px\]{
-  width: 47px;
-}
-
-.w-\[px\]{
-  width: px;
-}
-
-.w-\[164px\]{
-  width: 164px;
-}
-
 .max-w-\[1149px\]{
   max-width: 1149px;
+}
+
+.max-w-\[1276px\]{
+  max-width: 1276px;
 }
 
 .max-w-\[1523px\]{
@@ -885,8 +891,16 @@ h3{
   max-width: 1680px;
 }
 
+.max-w-\[1681px\]{
+  max-width: 1681px;
+}
+
 .max-w-\[1771px\]{
   max-width: 1771px;
+}
+
+.max-w-\[1866px\]{
+  max-width: 1866px;
 }
 
 .max-w-\[547px\]{
@@ -895,6 +909,10 @@ h3{
 
 .max-w-\[734px\]{
   max-width: 734px;
+}
+
+.max-w-\[920px\]{
+  max-width: 920px;
 }
 
 .max-w-\[926px\]{
@@ -908,70 +926,6 @@ h3{
 .max-w-max{
   max-width: -moz-max-content;
   max-width: max-content;
-}
-
-.max-w-\[\]{
-  max-width: ;
-}
-
-.max-w-\[1866px\]{
-  max-width: 1866px;
-}
-
-.max-w-\[1276px\]{
-  max-width: 1276px;
-}
-
-.max-w-\[126px\]{
-  max-width: 126px;
-}
-
-.max-w-\[1276x\]{
-  max-width: 1276x;
-}
-
-.max-w-\[1278px\]{
-  max-width: 1278px;
-}
-
-.max-w-\[1279px\]{
-  max-width: 1279px;
-}
-
-.max-w-\[1280px\]{
-  max-width: 1280px;
-}
-
-.max-w-\[1280p\]{
-  max-width: 1280p;
-}
-
-.max-w-\[1289px\]{
-  max-width: 1289px;
-}
-
-.max-w-\[1681\]{
-  max-width: 1681;
-}
-
-.max-w-\[1681px\]{
-  max-width: 1681px;
-}
-
-.max-w-\[919\]{
-  max-width: 919;
-}
-
-.max-w-\[919px\]{
-  max-width: 919px;
-}
-
-.max-w-\[px\]{
-  max-width: px;
-}
-
-.max-w-\[920px\]{
-  max-width: 920px;
 }
 
 .grid-cols-2{
@@ -1006,6 +960,10 @@ h3{
   gap: 0.25rem;
 }
 
+.gap-11{
+  gap: 2.75rem;
+}
+
 .gap-12{
   gap: 3rem;
 }
@@ -1038,8 +996,16 @@ h3{
   gap: 38px;
 }
 
-.gap-11{
-  gap: 2.75rem;
+.space-y-0 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+
+.space-y-0\.5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.125rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.125rem * var(--tw-space-y-reverse));
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]){
@@ -1058,18 +1024,6 @@ h3{
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-
-.space-y-0 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0px * var(--tw-space-y-reverse));
-}
-
-.space-y-0\.5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.125rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.125rem * var(--tw-space-y-reverse));
 }
 
 .rounded-full{
@@ -1099,24 +1053,9 @@ h3{
   background-color: rgb(139 139 139 / var(--tw-bg-opacity));
 }
 
-.bg-brand-dark-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 14 14 / var(--tw-bg-opacity));
-}
-
-.bg-red-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
 .bg-brand-gray-600{
   --tw-bg-opacity: 1;
   background-color: rgb(112 112 112 / var(--tw-bg-opacity));
-}
-
-.bg-gray-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 .bg-gray-950{
@@ -1124,48 +1063,12 @@ h3{
   background-color: rgb(3 7 18 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-r{
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-\[url\(\)\]{
-  background-image: url();
-}
-
-.bg-\[url\(\.\.\/\)\]{
-  background-image: url(../);
-}
-
-.bg-\[url\(\.\.\/css\/\)\]{
-  background-image: url(../css/);
-}
-
-.bg-\[url\(\.\.\/images\.\)\]{
-  background-image: url(../images.);
-}
-
-.bg-\[url\(\.\.\/images\.users\.jpg\)\]{
-  background-image: url(../images.users.jpg);
-}
-
-.bg-\[url\(\.\/images\.users\.jpg\)\]{
-  background-image: url(./images.users.jpg);
-}
-
-.bg-\[url\(\.\/images\/\.users\.jpg\)\]{
-  background-image: url(./images/.users.jpg);
-}
-
-.bg-\[url\(\.\/images\/users\.jpg\)\]{
-  background-image: url(./images/users.jpg);
-}
-
 .bg-\[url\(\.\.\/images\/users\.jpg\)\]{
   background-image: url(../images/users.jpg);
 }
 
-.bg-\[url\(\.\.\/images\/users\.jp\)\]{
-  background-image: url(../images/users.jp);
+.bg-gradient-to-r{
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .from-\[\#FE6783\]{
@@ -1193,6 +1096,11 @@ h3{
 
 .bg-no-repeat{
   background-repeat: no-repeat;
+}
+
+.px-28{
+  padding-left: 7rem;
+  padding-right: 7rem;
 }
 
 .px-5{
@@ -1225,19 +1133,14 @@ h3{
   padding-bottom: 1.25rem;
 }
 
+.py-7{
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
 .py-\[46px\]{
   padding-top: 46px;
   padding-bottom: 46px;
-}
-
-.py-\[88px\]{
-  padding-top: 88px;
-  padding-bottom: 88px;
-}
-
-.py-\[\]{
-  padding-top: ;
-  padding-bottom: ;
 }
 
 .py-\[82px\]{
@@ -1245,29 +1148,9 @@ h3{
   padding-bottom: 82px;
 }
 
-.py-28{
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.py-\[106px0\]{
-  padding-top: 106px0;
-  padding-bottom: 106px0;
-}
-
-.py-\[106px\]{
-  padding-top: 106px;
-  padding-bottom: 106px;
-}
-
-.px-28{
-  padding-left: 7rem;
-  padding-right: 7rem;
-}
-
-.py-7{
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
+.py-\[88px\]{
+  padding-top: 88px;
+  padding-bottom: 88px;
 }
 
 .pb-24{
@@ -1276,6 +1159,14 @@ h3{
 
 .pb-\[212px\]{
   padding-bottom: 212px;
+}
+
+.pb-\[288px\]{
+  padding-bottom: 288px;
+}
+
+.pb-\[87px\]{
+  padding-bottom: 87px;
 }
 
 .pl-11{
@@ -1302,28 +1193,20 @@ h3{
   padding-top: 101px;
 }
 
-.pt-\[301px\]{
-  padding-top: 301px;
-}
-
-.pb-\[288px\]{
-  padding-bottom: 288px;
-}
-
 .pt-\[106px\]{
   padding-top: 106px;
 }
 
-.pb-\[\]{
-  padding-bottom: ;
-}
-
-.pb-\[87px\]{
-  padding-bottom: 87px;
+.pt-\[301px\]{
+  padding-top: 301px;
 }
 
 .text-center{
   text-align: center;
+}
+
+.text-\[100px\]{
+  font-size: 100px;
 }
 
 .text-\[112px\]{
@@ -1342,6 +1225,14 @@ h3{
   font-size: 25px;
 }
 
+.text-\[27px\]{
+  font-size: 27px;
+}
+
+.text-\[28px\]{
+  font-size: 28px;
+}
+
 .text-\[30px\]{
   font-size: 30px;
 }
@@ -1350,8 +1241,24 @@ h3{
   font-size: 37px;
 }
 
+.text-\[38px\]{
+  font-size: 38px;
+}
+
 .text-\[40px\]{
   font-size: 40px;
+}
+
+.text-\[42px\]{
+  font-size: 42px;
+}
+
+.text-\[43px\]{
+  font-size: 43px;
+}
+
+.text-\[70px\]{
+  font-size: 70px;
 }
 
 .text-\[80px\]{
@@ -1361,44 +1268,6 @@ h3{
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-\[70px\]{
-  font-size: 70px;
-}
-
-.text-\[42px\]{
-  font-size: 42px;
-}
-
-.text-\[27px\]{
-  font-size: 27px;
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-\[28px\]{
-  font-size: 28px;
-}
-
-.text-\[100px\]{
-  font-size: 100px;
-}
-
-.text-\[43px\]{
-  font-size: 43px;
-}
-
-.text-\[38px\]{
-  font-size: 38px;
 }
 
 .font-bold{
@@ -1433,8 +1302,20 @@ h3{
   line-height: 168px !important;
 }
 
+.leading-10{
+  line-height: 2.5rem;
+}
+
+.leading-\[105px\]{
+  line-height: 105px;
+}
+
 .leading-\[120px\]{
   line-height: 120px;
+}
+
+.leading-\[150px\]{
+  line-height: 150px;
 }
 
 .leading-\[27px\]{
@@ -1453,6 +1334,10 @@ h3{
   line-height: 38px;
 }
 
+.leading-\[42px\]{
+  line-height: 42px;
+}
+
 .leading-\[45px\]{
   line-height: 45px;
 }
@@ -1461,40 +1346,20 @@ h3{
   line-height: 56px;
 }
 
+.leading-\[57px\]{
+  line-height: 57px;
+}
+
 .leading-\[60px\]{
   line-height: 60px;
-}
-
-.leading-\[93px\]{
-  line-height: 93px;
-}
-
-.leading-\[105px\]{
-  line-height: 105px;
-}
-
-.leading-3{
-  line-height: .75rem;
 }
 
 .leading-\[63px\]{
   line-height: 63px;
 }
 
-.leading-10{
-  line-height: 2.5rem;
-}
-
-.leading-\[42px\]{
-  line-height: 42px;
-}
-
-.leading-\[150px\]{
-  line-height: 150px;
-}
-
-.leading-\[57px\]{
-  line-height: 57px;
+.leading-\[93px\]{
+  line-height: 93px;
 }
 
 .text-brand-blue-500{
@@ -1515,14 +1380,6 @@ h3{
 .text-brand-green-500{
   --tw-text-opacity: 1;
   color: rgb(15 198 92 / var(--tw-text-opacity));
-}
-
-.text-\[\]{
-  color: ;
-}
-
-.text-\[27px0\]{
-  color: 27px0;
 }
 
 .opacity-45{
