--- a/src/css/output.css
+++ b/src/css/output.css
@@ -653,6 +653,78 @@ h3{
   color: rgb(50 108 249 / var(--tw-text-opacity));
 }
 
+/* hamburger btn */
+
+.hamburger-btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (min-width: 640px){
+  .hamburger-btn{
+    height: 2.25rem;
+    width: 2.25rem;
+  }
+}
+
+.hamburger-btn *{
+  display: inline-block;
+}
+
+.hamburger-btn-lines-wrapper{
+  position: relative;
+  display: flex;
+  width: 1.75rem;
+  height: 1.75rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.hamburger-btn-line{
+  position: absolute;
+  height: 0.125rem;
+  width: 100%;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.hamburger-btn-line:nth-child(1){
+  --tw-translate-y: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hamburger-btn-line:nth-child(2){
+  --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+/* active hamburger btn */
+
+.active-hamburger-btn .hamburger-btn-lines-wrapper{
+  --tw-rotate: 225deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active-hamburger-btn .hamburger-btn-line:nth-child(1){
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active-hamburger-btn .hamburger-btn-line:nth-child(2){
+  --tw-translate-y: 0px;
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .absolute{
   position: absolute;
 }
@@ -777,6 +849,10 @@ h3{
   display: grid;
 }
 
+.hidden{
+  display: none;
+}
+
 .size-\[33px\]{
   width: 33px;
   height: 33px;
@@ -807,8 +883,8 @@ h3{
   height: 276px;
 }
 
-.h-\[42px\]{
-  height: 42px;
+.h-\[33px\]{
+  height: 33px;
 }
 
 .h-\[52px\]{
@@ -823,12 +899,24 @@ h3{
   height: auto;
 }
 
+.h-\[33p\]{
+  height: 33p;
+}
+
+.h-\[29px\]{
+  height: 29px;
+}
+
 .w-313{
   width: 313px;
 }
 
 .w-7{
   width: 1.75rem;
+}
+
+.w-9{
+  width: 2.25rem;
 }
 
 .w-\[11px\]{
@@ -851,10 +939,6 @@ h3{
   width: 309px;
 }
 
-.w-\[45px\]{
-  width: 45px;
-}
-
 .w-\[47px\]{
   width: 47px;
 }
@@ -869,6 +953,10 @@ h3{
 
 .w-full{
   width: 100%;
+}
+
+.w-8{
+  width: 2rem;
 }
 
 .max-w-\[1149px\]{
@@ -1098,6 +1186,10 @@ h3{
   background-repeat: no-repeat;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
 .px-28{
   padding-left: 7rem;
   padding-right: 7rem;
@@ -1153,6 +1245,16 @@ h3{
   padding-bottom: 88px;
 }
 
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .pb-24{
   padding-bottom: 6rem;
 }
@@ -1205,6 +1307,11 @@ h3{
   text-align: center;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-\[100px\]{
   font-size: 100px;
 }
@@ -1235,10 +1342,6 @@ h3{
 
 .text-\[30px\]{
   font-size: 30px;
-}
-
-.text-\[37px\]{
-  font-size: 37px;
 }
 
 .text-\[38px\]{
@@ -1342,10 +1445,6 @@ h3{
   line-height: 45px;
 }
 
-.leading-\[56px\]{
-  line-height: 56px;
-}
-
 .leading-\[57px\]{
   line-height: 57px;
 }
@@ -1411,3 +1510,70 @@ h3{
 /* components */
 
 /* utilities */
+
+@media (min-width: 640px){
+  .sm\:h-\[37px\]{
+    height: 37px;
+  }
+
+  .sm\:w-10{
+    width: 2.5rem;
+  }
+
+  .sm\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .sm\:py-10{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .sm\:py-9{
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+  }
+
+  .sm\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:h-\[42px\]{
+    height: 42px;
+  }
+
+  .md\:w-\[45px\]{
+    width: 45px;
+  }
+
+  .md\:py-\[46px\]{
+    padding-top: 46px;
+    padding-bottom: 46px;
+  }
+
+  .md\:text-\[37px\]{
+    font-size: 37px;
+  }
+
+  .md\:leading-\[56px\]{
+    line-height: 56px;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:inline-block{
+    display: inline-block;
+  }
+
+  .lg\:flex{
+    display: flex;
+  }
+
+  .lg\:hidden{
+    display: none;
+  }
+}
