--- a/input.css
+++ b/input.css
@@ -23,7 +23,7 @@
 /* components */
 @layer components {
   .main-btn {
-    @apply bg-brand-blue-500 py-6 px-5 rounded-lg capitalize transition-opacity hover:opacity-75;
+    @apply bg-brand-blue-500 py-6 px-5 rounded-lg text-lg font-medium capitalize transition-opacity hover:opacity-75 md:text-xl md:leading-[30px];
   }
 
   .secondary-btn {
