--- a/src/css/output.css
+++ b/src/css/output.css
@@ -612,6 +612,9 @@ h3{
   padding-bottom: 1.5rem;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 500;
   text-transform: capitalize;
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -620,6 +623,14 @@ h3{
 
 .main-btn:hover{
   opacity: 0.75;
+}
+
+@media (min-width: 768px){
+  .main-btn{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    line-height: 30px;
+  }
 }
 
 .secondary-btn{
@@ -785,6 +796,10 @@ h3{
   margin-bottom: 3.5rem;
 }
 
+.mb-16{
+  margin-bottom: 4rem;
+}
+
 .mb-20{
   margin-bottom: 5rem;
 }
@@ -817,10 +832,6 @@ h3{
   margin-bottom: 2rem;
 }
 
-.mb-\[136px\]{
-  margin-bottom: 136px;
-}
-
 .mb-\[52px\]{
   margin-bottom: 52px;
 }
@@ -831,6 +842,10 @@ h3{
 
 .mr-5{
   margin-right: 1.25rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .block{
@@ -883,8 +898,8 @@ h3{
   height: 276px;
 }
 
-.h-\[33px\]{
-  height: 33px;
+.h-\[29px\]{
+  height: 29px;
 }
 
 .h-\[52px\]{
@@ -899,14 +914,6 @@ h3{
   height: auto;
 }
 
-.h-\[33p\]{
-  height: 33p;
-}
-
-.h-\[29px\]{
-  height: 29px;
-}
-
 .w-313{
   width: 313px;
 }
@@ -915,8 +922,8 @@ h3{
   width: 1.75rem;
 }
 
-.w-9{
-  width: 2.25rem;
+.w-8{
+  width: 2rem;
 }
 
 .w-\[11px\]{
@@ -955,8 +962,16 @@ h3{
   width: 100%;
 }
 
-.w-8{
-  width: 2rem;
+.w-72{
+  width: 18rem;
+}
+
+.w-64{
+  width: 16rem;
+}
+
+.\!w-full{
+  width: 100% !important;
 }
 
 .max-w-\[1149px\]{
@@ -1016,6 +1031,10 @@ h3{
   max-width: max-content;
 }
 
+.grow{
+  flex-grow: 1;
+}
+
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1034,6 +1053,10 @@ h3{
 
 .items-center{
   align-items: center;
+}
+
+.items-stretch{
+  align-items: stretch;
 }
 
 .justify-center{
@@ -1082,6 +1105,10 @@ h3{
 
 .gap-\[38px\]{
   gap: 38px;
+}
+
+.gap-1\.5{
+  gap: 0.375rem;
 }
 
 .space-y-0 > :not([hidden]) ~ :not([hidden]){
@@ -1205,6 +1232,11 @@ h3{
   padding-right: 84px;
 }
 
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .py-24{
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -1225,14 +1257,14 @@ h3{
   padding-bottom: 1.25rem;
 }
 
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .py-7{
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
-}
-
-.py-\[46px\]{
-  padding-top: 46px;
-  padding-bottom: 46px;
 }
 
 .py-\[82px\]{
@@ -1240,19 +1272,14 @@ h3{
   padding-bottom: 82px;
 }
 
-.py-\[88px\]{
-  padding-top: 88px;
-  padding-bottom: 88px;
+.py-\[17px\]{
+  padding-top: 17px;
+  padding-bottom: 17px;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.py-\[18px\]{
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
 
 .pb-24{
@@ -1312,12 +1339,13 @@ h3{
   line-height: 2rem;
 }
 
-.text-\[100px\]{
-  font-size: 100px;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
-.text-\[112px\]{
-  font-size: 112px;
+.text-\[100px\]{
+  font-size: 100px;
 }
 
 .text-\[22px\]{
@@ -1373,6 +1401,16 @@ h3{
   line-height: 1.75rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1395,14 +1433,6 @@ h3{
 
 .capitalize{
   text-transform: capitalize;
-}
-
-.\!leading-\[119px\]{
-  line-height: 119px !important;
-}
-
-.\!leading-\[168px\]{
-  line-height: 168px !important;
 }
 
 .leading-10{
@@ -1511,7 +1541,31 @@ h3{
 
 /* utilities */
 
+@media not all and (min-width: 1280px){
+  .max-xl\:leading-normal{
+    line-height: 1.5;
+  }
+}
+
+@media not all and (min-width: 640px){
+  .max-sm\:w-full{
+    width: 100%;
+  }
+}
+
 @media (min-width: 640px){
+  .sm\:mb-24{
+    margin-bottom: 6rem;
+  }
+
+  .sm\:mb-20{
+    margin-bottom: 5rem;
+  }
+
+  .sm\:mb-16{
+    margin-bottom: 4rem;
+  }
+
   .sm\:h-\[37px\]{
     height: 37px;
   }
@@ -1520,14 +1574,38 @@ h3{
     width: 2.5rem;
   }
 
+  .sm\:w-313{
+    width: 313px;
+  }
+
+  .sm\:w-full{
+    width: 100%;
+  }
+
+  .sm\:flex-row{
+    flex-direction: row;
+  }
+
+  .sm\:items-center{
+    align-items: center;
+  }
+
+  .sm\:gap-2{
+    gap: 0.5rem;
+  }
+
+  .sm\:gap-2\.5{
+    gap: 0.625rem;
+  }
+
   .sm\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
   }
 
-  .sm\:py-10{
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
+  .sm\:py-16{
+    padding-top: 4rem;
+    padding-bottom: 4rem;
   }
 
   .sm\:py-9{
@@ -1535,13 +1613,43 @@ h3{
     padding-bottom: 2.25rem;
   }
 
+  .sm\:py-6{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
   .sm\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+
+  .sm\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .sm\:text-\[25px\]{
+    font-size: 25px;
+  }
+
+  .sm\:font-normal{
+    font-weight: 400;
+  }
+
+  .sm\:font-medium{
+    font-weight: 500;
+  }
+
+  .sm\:leading-\[38px\]{
+    line-height: 38px;
+  }
 }
 
 @media (min-width: 768px){
+  .md\:mb-\[136px\]{
+    margin-bottom: 136px;
+  }
+
   .md\:h-\[42px\]{
     height: 42px;
   }
@@ -1550,13 +1658,36 @@ h3{
     width: 45px;
   }
 
+  .md\:w-313{
+    width: 313px;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
   .md\:py-\[46px\]{
     padding-top: 46px;
     padding-bottom: 46px;
   }
 
+  .md\:py-\[88px\]{
+    padding-top: 88px;
+    padding-bottom: 88px;
+  }
+
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
   .md\:text-\[37px\]{
     font-size: 37px;
+  }
+
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .md\:leading-\[56px\]{
@@ -1565,6 +1696,10 @@ h3{
 }
 
 @media (min-width: 1024px){
+  .lg\:mb-24{
+    margin-bottom: 6rem;
+  }
+
   .lg\:inline-block{
     display: inline-block;
   }
@@ -1575,5 +1710,36 @@ h3{
 
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .lg\:text-\[40px\]{
+    font-size: 40px;
+  }
+
+  .lg\:leading-\[60px\]{
+    line-height: 60px;
+  }
+}
+
+@media (min-width: 1280px){
+  .xl\:mb-\[136px\]{
+    margin-bottom: 136px;
+  }
+
+  .xl\:text-\[112px\]{
+    font-size: 112px;
+  }
+
+  .xl\:\!leading-\[119px\]{
+    line-height: 119px !important;
+  }
+
+  .xl\:\!leading-\[168px\]{
+    line-height: 168px !important;
   }
 }
